--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE.txt
 include README.md
-include unrar/tests/*.rar
+include unrar/libunrar.dylib unrar/libunrar.so unrar/libunrar.dll
 include docs/*
